# StormingCode

./: README.md
CPP/: .clang-format  CMakeLists.txt
CPP/cmake/: Config.cmake
CPP/include/: CMakeLists.txt  Defines.h  StringHelper.h
CPP/src/: CMakeLists.txt  StringHelper.cpp  StringHelperLinux.cpp  StringHelperWin.cpp
CPP/test/: CMakeLists.txt
CPP/test/string_helper_test/: CmakeLists.txt  main.cpp
DesignPattern/: CMakeLists.txt
DesignPattern/src/: CMakeLists.txt
DesignPattern/src/builder_pattern/: ChikenHamburg.h  CmakeLists.txt  CocaCola.h  Define.h  Drink.h  Hamburg.h  Item.cpp  Item.h  Meal.cpp  Meal.h  PepsiCola.h  VegHamburg.h
DesignPattern/src/factory_pattern/: Circle.cpp  Circle.h  CmakeLists.txt  Define.h  Rectangle.cpp  Rectangle.h  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Square.cpp  Square.h
DesignPattern/test/builder_pattern/: CmakeLists.txt  test_builder_pattern.cpp
DesignPattern/test/factory_pattern/: CmakeLists.txt  test_factory_pattern.cpp
Excel2Lua/: ExecelTLua.py  readme.md
Excel2Lua/test/: test.xlsx
cocos/扫描中文工具/: chinese2Excel.py  readme.md
